# revpop-core

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile  FuckingPathetic  LICENSE.txt  README-docker.md  README-revpop-docker.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  build_error.md  feature_request.md
.github/workflows/: build-and-test.ubuntu-debug.yml  build-and-test.ubuntu-release.yml
docker/: default_config.ini  entrypoint.sh
docker/revpop/: default_config.ini  default_logging.ini  entrypoint.sh  my-genesis.json  revpopentry.sh
libraries/: CMakeLists.txt  README.md
libraries/app/: CMakeLists.txt  api.cpp  application.cpp  config_util.cpp  database_api.cpp  database_api_impl.hxx  util.cpp
libraries/chain/: CMakeLists.txt  account_evaluator.cpp  account_object.cpp  asset_evaluator.cpp  asset_object.cpp  commit_reveal_evaluator.cpp  commit_reveal_object.cpp  commit_reveal_v2_evaluator.cpp  commit_reveal_v2_object.cpp  commit_reveal_v3_evaluator.cpp  committee_member_evaluator.cpp  confidential_evaluator.cpp  content_card_evaluator.cpp  content_card_object.cpp  content_card_v2_evaluator.cpp  content_card_v2_object.cpp  content_vote_evaluator.cpp  content_vote_object.cpp  database.cpp  db_block.cpp  db_commit_reveal.cpp  db_commit_reveal_v2.cpp  db_debug.cpp  db_getter.cpp  db_init.cpp  db_maint.cpp  db_management.cpp  db_market.cpp  db_notify.cpp  db_update.cpp  evaluator.cpp  exceptions.cpp  genesis_state.cpp  get_config.cpp  htlc_evaluator.cpp  ico_balance_evaluator.cpp  is_authorized_asset.cpp  market_evaluator.cpp  market_object.cpp  permission_evaluator.cpp  (+14 more)
libraries/db/: CMakeLists.txt  undo_database.cpp
libraries/egenesis/: CMakeLists.txt  README-dev.md  genesis-dev.json  genesis.json  seed-nodes.txt
libraries/net/: CMakeLists.txt  node.cpp  peer_connection.cpp  peer_database.cpp
libraries/plugins/: CMakeLists.txt  README.md
libraries/plugins/account_history/: CMakeLists.txt  account_history_plugin.cpp
libraries/plugins/api_helper_indexes/: CMakeLists.txt  api_helper_indexes.cpp
libraries/plugins/api_helper_indexes/include/graphene/api_helper_indexes/: api_helper_indexes.hpp
libraries/plugins/content_cards/: CMakeLists.txt  content_cards.cpp
libraries/plugins/content_cards/include/graphene/content_cards/: content_cards.hpp
libraries/plugins/custom_operations/: CMakeLists.txt  custom_evaluators.cpp
libraries/plugins/debug_witness/: CMakeLists.txt
libraries/plugins/delayed_node/: CMakeLists.txt
libraries/plugins/elasticsearch/: CMakeLists.txt  elasticsearch_plugin.cpp
libraries/plugins/elasticsearch/include/graphene/elasticsearch/: elasticsearch_plugin.hpp
libraries/plugins/es_objects/: CMakeLists.txt
libraries/plugins/grouped_orders/: CMakeLists.txt
libraries/plugins/market_history/: CMakeLists.txt  market_history_plugin.cpp
libraries/plugins/market_history/include/graphene/market_history/: market_history_plugin.hpp
libraries/plugins/snapshot/: CMakeLists.txt
libraries/plugins/template_plugin/: CMakeLists.txt
libraries/plugins/witness/: CMakeLists.txt  witness.cpp
libraries/plugins/witness/include/graphene/witness/: witness.hpp
libraries/protocol/: CMakeLists.txt  account.cpp  asset.cpp  asset_ops.cpp  chain_parameters.cpp  commit_reveal.cpp  commit_reveal_v2.cpp  commit_reveal_v3.cpp  content_card.cpp  content_card_v2.cpp  content_vote.cpp  fee_schedule.cpp  fee_schedule_calc.cpp  (+13 more)
libraries/tokendistribution/: CMakeLists.txt  Keccak256.cpp  tokendistribution.cpp
libraries/tokendistribution/include/graphene/tokendistribution/: Keccak256.hpp  tokendistribution.hpp
programs/: CMakeLists.txt  README.md
programs/data_gateway/: CMakeLists.txt  gateway.cpp  gateway.hpp  gateway_api_impl.cpp  gateway_api_impl.hpp  main.cpp  storage_adapter.hpp  storage_adapter_ipfs.cpp  storage_adapter_ipfs.hpp
(+167 files in other folders)
